# tutos

./: README.md
ab-testing/: .env.example  README.md  pyproject.toml
ab-testing/docs/: NOTES.md
ab-testing/src/ab_testing/: __init__.py  bayesian.py  experiment.py  reporter.py  sample_size.py  sequential.py  simulator.py  statistics.py
ab-testing/tests/: test_bayesian.py  test_sample_size.py  test_sequential.py  test_statistics.py
airflow/: .env.example  README.md  pyproject.toml
airflow/docs/: NOTES.md
airflow/src/airflow/: __init__.py
airflow/src/airflow/dags/: data_ingestion_dag.py  ml_pipeline_dag.py
airflow/src/airflow/hooks/: model_registry_hook.py
airflow/src/airflow/operators/: training_operator.py  validation_operator.py
airflow/src/airflow/sensors/: data_sensor.py
airflow/src/airflow/utils/: config.py  notifications.py
airflow/tests/: test_dags.py  test_operators.py
async/: .env.example  README.md  pyproject.toml
async/docs/: NOTES.md
async/src/async_engine/: __init__.py  batcher.py  health.py  inference.py  metrics.py  middleware.py  queue.py  server.py
async/tests/: test_batcher.py  test_queue.py  test_server.py
bytewax/: .env.example  README.md  pyproject.toml
bytewax/docs/: NOTES.md
bytewax/src/bytewax/: __init__.py  models.py  pipeline.py  serialization.py  sinks.py  sources.py  transforms.py  windows.py
bytewax/tests/: test_models.py  test_pipeline.py  test_transforms.py
celery-fastapi/: .env.example  README.md  pyproject.toml
celery-fastapi/docs/: NOTES.md
celery-fastapi/src/celery_fastapi/: __init__.py
celery-fastapi/src/celery_fastapi/api/: app.py  routes.py  schemas.py  websocket.py
celery-fastapi/src/celery_fastapi/core/: config.py
celery-fastapi/src/celery_fastapi/worker/: callbacks.py  celery_app.py  tasks.py
celery-fastapi/tests/: conftest.py  test_api.py  test_tasks.py
dagster/: .env.example  README.md  pyproject.toml
dagster/.tmp_dagster_home_4p_yyc5a/history/: runs.db
dagster/.tmp_dagster_home_4p_yyc5a/history/runs/: index.db  index.db-shm
dagster/.tmp_dagster_home_4p_yyc5a/schedules/: schedules.db
dagster/docs/: NOTES.md
dagster/src/: __init__.py  definitions.py  partitions.py  schedules.py
dagster/src/assets/: __init__.py  evaluation.py  features.py  ingestion.py  training.py
dagster/src/dagster/: definitions.py  schedules.py
dagster/src/dagster/assets/: __init__.py  evaluation.py  features.py  ingestion.py  training.py
dagster/src/dagster/resources/: database.py
dagster/src/dagster/sensors/: new_data_sensor.py
dagster/src/io_managers/: model_io_manager.py  parquet_io_manager.py
dagster/tests/: test_assets.py  test_io_managers.py  test_sensors.py
dynamic-batching/: .env.example  README.md  pyproject.toml
dynamic-batching/docs/: NOTES.md
dynamic-batching/src/dynamic_batching/: __init__.py  batcher.py  benchmark.py  config.py  executor.py  metrics.py  padding.py  request.py  scheduler.py  server.py  strategies.py
dynamic-batching/tests/: test_batcher.py  test_metrics.py  test_padding.py  test_server.py  test_strategies.py
feature-store/: .env.example  README.md  pyproject.toml
feature-store/docs/: NOTES.md
feature-store/src/feature_store/: __init__.py  data_generator.py  materialization.py  offline_retrieval.py  serving.py
feature-store/tests/: test_feature_definitions.py  test_offline_retrieval.py  test_serving.py
great-expectations/: .env.example  README.md  pyproject.toml
great-expectations/docs/: NOTES.md
great-expectations/src/great_expectations/: __init__.py  context_setup.py  data_generator.py  pipeline_integration.py
great-expectations/tests/: test_checkpoints.py  test_custom_expectations.py  test_pipeline_integration.py
grpc/: .env.example  README.md  pyproject.toml
grpc/docs/: NOTES.md
grpc/src/grpc/: __init__.py
grpc/tests/: test_client.py  test_interceptors.py  test_servicer.py
langsmith/: .env.example  README.md  pyproject.toml
langsmith/docs/: NOTES.md
langsmith/src/langsmith/: app.py
langsmith/tests/: test_chains.py  test_evaluators.py  test_prompt_registry.py
llm-fine-tuning/: .env.example  .envrc  README.md  pyproject.toml
llm-fine-tuning/docs/: NOTES.md
llm-fine-tuning/tests/: test_data_preparation.py  test_evaluation.py  test_training_config.py
llm-serving/: .env.example  README.md  pyproject.toml
llm-serving/docs/: NOTES.md
llm-serving/tests/: test_api_gateway.py  test_config.py  test_streaming.py
multi-agent-orchestration/: README.md  pyproject.toml
multi-agent-orchestration/docs/: NOTES.md
multi-agent-orchestration/src/multi_agent_orchestration/: orchestrator.py
multi-agent-orchestration/tests/: test_agents.py  test_communication.py  test_orchestrator.py  test_workflow.py
process-mining/: README.md  pyproject.toml
process-mining/docs/: NOTES.md
process-mining/src/process_mining/: event_log.py
process-mining/tests/: test_alpha_miner.py  test_bottleneck.py  test_conformance.py  test_dfg.py  test_event_log.py
pyspark/: .env.example  README.md  pyproject.toml
pyspark/docs/: NOTES.md
pyspark/src/pyspark/: app.py  data_generator.py
pyspark/tests/: conftest.py  test_cleaning.py  test_user_features.py  test_window_features.py
qdrant/: .env.example  README.md  pyproject.toml
qdrant/docs/: NOTES.md
qdrant/src/qdrant/: collection_manager.py
qdrant/tests/: test_collection_manager.py  test_rag_pipeline.py  test_search.py
ranking/: .env.example  README.md  pyproject.toml
ranking/docs/: NOTES.md
ranking/tests/: test_api.py  test_features.py  test_metrics.py  test_models.py
ray/: .env.example  README.md  pyproject.toml
ray/docs/: NOTES.md
ray/src/ray/data/: dataset.py  (+1 more)
ray/tests/: conftest.py  test_serve.py  test_train.py  test_tune.py
recsys/: .env.example  README.md  pyproject.toml
recsys/docs/: NOTES.md
recsys/tests/: test_api.py  test_collaborative.py  test_evaluation.py  test_hybrid.py
socket/: .env.example  README.md  pyproject.toml
socket/docs/: NOTES.md
socket/tests/: test_alert_manager.py  test_detectors.py  test_stream_processor.py  test_websocket_server.py
(+154 files in other folders)
