[tool.poetry]
name = "ab-testing"
version = "0.1.0"
description = "ML Model A/B Testing Platform with frequentist and Bayesian methods"
authors = ["learner"]
readme = "README.md"
packages = [{include = "ab_testing", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
scipy = "^1.12"
pandas = "^2.2"
matplotlib = "^3.8"
plotly = "^5.18"
pydantic = "^2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
