[tool.poetry]
name = "airflow-ml-pipeline"
version = "0.1.0"
description = "ML Pipeline Orchestrator with Apache Airflow"
authors = ["learner"]
readme = "README.md"
packages = [{include = "airflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
apache-airflow = "^2.8"
pandas = "^2.2"
scikit-learn = "^1.4"
boto3 = "^1.34"
pydantic = "^2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
