[tool.poetry]
name = "async-inference-engine"
version = "0.1.0"
description = "Async Batch Inference Engine with priority queues and dynamic batching"
authors = ["learner"]
readme = "README.md"
packages = [{include = "async_engine", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9"
numpy = "^1.26"
pydantic = "^2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
