[tool.poetry]
name = "bytewax-project"
version = "0.1.0"
description = "Real-time feature engineering pipeline using Bytewax for clickstream processing"
authors = ["learner"]
readme = "README.md"
packages = [{include = "bytewax", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
bytewax = ">=0.21"
pydantic = "^2.0"
orjson = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
