[tool.poetry]
name = "dagster-project"
version = "0.1.0"
description = "Software-defined ML assets pipeline with Dagster"
authors = ["learner"]
readme = "README.md"
packages = [{include = "dagster", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
dagster = ">=1.7"
dagster-webserver = ">=1.7"
pandas = "^2.0"
scikit-learn = "^1.4"
pyarrow = ">=15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
