[tool.poetry]
name = "dynamic-batching"
version = "0.1.0"
description = "Adaptive ML inference batcher — dynamic batching system for model serving"
authors = ["Tutorial Author"]
readme = "README.md"
packages = [{include = "dynamic_batching", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
pydantic = "^2.10"
pydantic-settings = "^2.7"
numpy = "^2.2"
matplotlib = "^3.10"
httpx = "^0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
ruff = "^0.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
