[tool.poetry]
name = "feature-store"
version = "0.1.0"
description = "Fraud Detection Feature Store with Feast"
authors = ["learner"]
readme = "README.md"
packages = [{include = "feature_store", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
feast = "^0.40"
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.4"
fastapi = "^0.115"
uvicorn = "^0.34"
pyarrow = "^18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
httpx = "^0.27"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
