[tool.poetry]
name = "great-expectations"
version = "0.1.0"
description = "ML Data Quality Guardian with Great Expectations"
authors = ["learner"]
readme = "README.md"
packages = [{include = "great_expectations", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
great-expectations = "^1.3"
pandas = "^2.2"
numpy = "^1.26"
scipy = "^1.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
