[tool.poetry]
name = "qdrant-project"
version = "0.1.0"
description = "Semantic Search & RAG Engine – hybrid search with Qdrant and retrieval-augmented generation"
authors = ["emdim"]
readme = "README.md"
packages = [{include = "qdrant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
qdrant-client = "^1.12"
sentence-transformers = "^3.0"
fastembed = "^0.4"
openai = "^1.0"
pydantic = "^2.0"
numpy = "^1.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
