[tool.poetry]
name = "ray-project"
version = "0.1.0"
description = "Distributed ML platform with Ray: hyperparameter tuning, distributed training, and model serving"
authors = []
readme = "README.md"
packages = [{ include = "ray", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
ray = { version = ">=2.9,<3.0", extras = ["default", "tune", "train", "serve"] }
scikit-learn = ">=1.3"
torch = ">=2.1"
pandas = ">=2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
pytest-asyncio = ">=0.23"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests that require significant compute",
    "integration: marks tests that need a running Ray cluster",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
