[tool.poetry]
name = "recsys"
version = "0.1.0"
description = "Hybrid recommendation engine combining collaborative filtering, content-based filtering, and neural approaches"
authors = []
readme = "README.md"
packages = [{include = "recsys", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26"
scipy = "^1.12"
pandas = "^2.2"
scikit-learn = "^1.4"
torch = "^2.2"
fastapi = "^0.110"
uvicorn = "^0.29"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
httpx = "^0.27"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
